infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
  labels:
    name: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    name: infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: ops
  labels:
    name: ops
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
